# osom_regridder

./: .gitignore  README.md  compute_map.py  file_input.py  import_raster.py  main.py  output.py  output_image.py  pyproject.toml  regrid.py
notebooks/: osom-regrid-manual.ipynb
scripts/: batch_job.sh  build-and-run.sh  georeference.sh  type-check.sh
src/osom_regridder/: __main__.py  compute_map.py  constants.py  deprecate.compute_map.py  deprecate.map_interface.py  deprecate.regrid.py  file_input.py  main.py  map_interface.py  output.py  pipeline.py  regrid.py  regrid_map.py
tests/: test_regrid.py
