[project]
name = "osom-regridder"
version = "0.1.0"
authors = [
    { name="Anna Murphy", email="anna_murphy1@brown.edu" }
]
description = "Transforms OSOM data from an internal grid system to a lat/lon grid."
readme = "README.md"
dependencies = [
    "mypy>=1.19.0",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
]

[project.scripts]
osom_regridder = "osom_regridder.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
