[project]
name = "osom-regridder"
version = "0.1.0"
authors = [
    { name="Anna Murphy", email="anna_murphy1@brown.edu" }
]
description = "Transforms OSOM data from an internal grid system to a lat/lon grid."
readme = "README.md"
dependencies = [
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "scipy>=1.17.0",
    "typer>=0.20.0",
]
requires-python = ">=3.11"

[project.scripts]
osom_regridder = "osom_regridder.__main__:app"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
